--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="resources/css/style.css"
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
+
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="">Download Excursion (Coming soon!)</a></p>
+    <p>
+        <video width="220px" height="450px" autoplay muted loop>
+        <source src="resources/assets/excursion.mp4" type="video/mp4">
+        </video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <p class="normalText">Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/assets/landscape.webp"></p>
+    <p><img src="resources/assets/icon.webp"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="">Download Excursion (Coming soon!)</a></p>
 </body>
 
-<footer></footer>
+<footer>
+    <p id="companyFooter">© Excursion</p>
+</footer>
